[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "striptease"
author = "Stefano Sartor, Maurizio Tomasi"
author-email = ""
home-page = "https://github.com/lspestrip/striptease"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
    "numpy >= 1.15",
    "scipy >= 1.1",
    "matplotlib >= 2.0",
    "astropy >= 3.0",
    "h5py >= 2.8",
    "websockets >= 6.0",
    "PyQt5 >= 5.9",
]
requires-python = ">= 3.6"
